--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -23,14 +23,15 @@ target_link_libraries(LauncherApp
     user32           # User interface
 )
 
+# Add pragma comments for MSVC
+if(MSVC)
+    target_compile_options(LauncherApp PRIVATE /W4)
+    target_link_options(LauncherApp PRIVATE "/SUBSYSTEM:CONSOLE")
+else()
+    target_compile_options(LauncherApp PRIVATE -Wall -Wextra)
+endif()
+
 # Set output directory
 set_target_properties(LauncherApp PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/Release"
 )
-
-# Enable warnings
-if(MSVC)
-    target_compile_options(LauncherApp PRIVATE /W4)
-else()
-    target_compile_options(LauncherApp PRIVATE -Wall -Wextra)
-endif()
