--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -4,11 +4,9 @@ project(LauncherApp VERSION 1.0.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Add source files
+# Add source files - ONLY main.cpp
 add_executable(LauncherApp
     src/main.cpp
-    src/launcher.cpp
-    src/update_manager.cpp
 )
 
 # Include directories
@@ -17,18 +15,13 @@ target_include_directories(LauncherApp PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
 # Link Windows libraries
 target_link_libraries(LauncherApp
     PRIVATE
-    ws2_32           # Winsock2 for network
-    wininet          # Internet API
-    shell32          # Shell functions
-    user32           # User interface
+    user32           # User interface for MessageBox
 )
 
-# Add pragma comments for MSVC
+# MSVC specific settings
 if(MSVC)
     target_compile_options(LauncherApp PRIVATE /W4)
     target_link_options(LauncherApp PRIVATE "/SUBSYSTEM:CONSOLE")
-else()
-    target_compile_options(LauncherApp PRIVATE -Wall -Wextra)
 endif()
 
 # Set output directory
