fix: Update build.yml with latest GitHub Actions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,12 +12,12 @@ jobs:
       contents: write
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
     - name: Setup Visual Studio
-      uses: microsoft/setup-msbuild@v1.1
+      uses: microsoft/setup-msbuild@v2
 
     - name: Install CMake
       uses: lukka/get-cmake@latest
@@ -33,49 +33,25 @@ jobs:
         cd build
         cmake --build . --config Release
 
-    - name: Create Release Body
-      id: release_body
-      run: |
-        $version = "${{ github.ref }}" -replace 'refs/tags/', ''
-        $body = @"
-        ## Release $version
-        
-        ### Features
-        - GitHub-based auto-update system
-        - SHA256 hash verification
-        - Configuration file support
-        
-        ### Downloads
-        - LauncherApp.exe - Main application
-        
-        ### Installation
-        1. Download LauncherApp.exe
-        2. Extract to desired location
-        3. Edit config.json with your repository
-        4. Run LauncherApp.exe
-        
-        ### Changelog
-        See CHANGELOG.md for detailed changes.
-        "@
-        Add-Content -Path $env:GITHUB_OUTPUT -Value "BODY=$body"
-
-    - name: Create GitHub Release
-      uses: actions/create-release@v1
+    - name: Create Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: build/Release/LauncherApp.exe
+        body: |
+          ## Release ${{ github.ref_name }}
+          
+          ### Features
+          - GitHub-based auto-update system
+          - SHA256 hash verification
+          - Configuration file support
+          
+          ### Installation
+          1. Download LauncherApp.exe
+          2. Extract to desired location
+          3. Run LauncherApp.exe
+          
+          ### Changelog
+          See CHANGELOG.md for detailed changes.
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        body: ${{ steps.release_body.outputs.BODY }}
-        draft: false
-        prerelease: false
-
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./build/Release/LauncherApp.exe
-        asset_name: LauncherApp.exe
-        asset_content_type: application/octet-stream
