--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,11 +33,25 @@ jobs:
         cd build
         cmake --build . --config Release
 
-    - name: Create Release
+    - name: Find and List Executables
+      run: |
+        echo "Searching for LauncherApp.exe..."
+        dir /s /b build\*.exe
+        if exist "build\Release\LauncherApp.exe" (
+          echo "Found: build\Release\LauncherApp.exe"
+        ) else if exist "build\Debug\LauncherApp.exe" (
+          echo "Found: build\Debug\LauncherApp.exe"
+        ) else (
+          echo "Searching all build directories..."
+          dir /s build\
+        )
+
+    - name: Create Release with Asset
       uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: build/Release/LauncherApp.exe
+        files: |
+          build/Release/LauncherApp.exe
+          build/Debug/LauncherApp.exe
         body: |
           ## Release ${{ github.ref_name }}
           
